make internet icon smaller, card min width fix

--- a/style.css
+++ b/style.css
@@ -363,6 +363,7 @@ button {
 .internetProjectsContainer {
   width: 95vw;
   max-width: 550px;
+  min-width: 270px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -398,6 +399,10 @@ button {
   margin-left: 10px;
   width: 30px;
 }
+.tiny-framework {
+  margin-left: 10px;
+  width: 20px;
+}
 .small-tech-container {
   /* width: 150px; */
   height: 25px;
@@ -408,6 +413,9 @@ button {
 }
 .small-tech-img {
   width: 25px;
+}
+.tiny-tech-img {
+  width: 15px;
 }
 .small-project-title {
   max-width: none;
